// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Character Profile Card can select all options in the modal 1`] = `
<View>
  <CharacterProfileCard
    character={
      Object {
        "background": Object {
          "lookupKey": "Background",
          "name": "Background",
        },
        "baseClass": Object {
          "lookupKey": "Class",
          "name": "Class",
        },
        "key": "key",
        "meta": Object {
          "lastUpdated": 0,
        },
        "profile": Object {
          "experience": 0,
          "firstName": "First",
          "lastName": "Last",
          "level": 1,
        },
        "race": Object {
          "lookupKey": "Race",
          "name": "Race",
        },
      }
    }
    deleteHandler={[Function]}
    editHandler={[Function]}
    isModalVisible={false}
    modalContent={null}
    modalHandler={[Function]}
    viewHandler={[Function]}
  />
  <ReactNativeModal
    animationIn="slideInUp"
    animationInTiming={300}
    animationOut="slideOutDown"
    animationOutTiming={300}
    avoidKeyboard={false}
    backdropColor="black"
    backdropOpacity={0.7}
    backdropTransitionInTiming={300}
    backdropTransitionOutTiming={300}
    hideModalContentWhileAnimating={false}
    isVisible={false}
    onBackButtonPress={[Function]}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalShow={[Function]}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    swipeThreshold={100}
    useNativeDriver={false}
  >
    <View />
  </ReactNativeModal>
</View>
`;

exports[`Character Profile Card can select all options in the modal 2`] = `
<View
  style={
    Object {
      "margin": 0,
    }
  }
>
  <ThemedComponent
    centerElement={
      <Styled(Text)
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Roboto",
              "fontSize": 14,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        First Last
      </Styled(Text)>
    }
    leftElement={
      <Image
        resizeMode="contain"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      />
    }
    style={
      Object {
        "container": Object {
          "borderBottomColor": "#e0e0e0",
          "borderBottomWidth": 1,
          "height": 55,
          "margin": 0,
        },
        "contentViewContainer": Object {
          "backgroundColor": "#fafafa",
        },
        "leftElementContainer": Object {
          "marginRight": -10,
        },
      }
    }
  />
  <ThemedComponent
    centerElement={
      <Styled(Text)
        style={
          Object {
            "color": "#000000",
            "fontFamily": "Roboto",
            "fontSize": 14,
          }
        }
      >
        View Character
      </Styled(Text)>
    }
    leftElement={
      <ThemedComponent
        name="open-in-new"
      />
    }
    onPress={[Function]}
    style={
      Object {
        "container": Object {
          "height": 50,
          "margin": 0,
        },
        "leftElementContainer": Object {
          "marginRight": -10,
        },
      }
    }
  />
  <ThemedComponent
    centerElement={
      <Styled(Text)
        style={
          Object {
            "color": "#000000",
            "fontFamily": "Roboto",
            "fontSize": 14,
          }
        }
      >
        Edit Character
      </Styled(Text)>
    }
    leftElement={
      <ThemedComponent
        name="mode-edit"
      />
    }
    onPress={[Function]}
    style={
      Object {
        "container": Object {
          "height": 50,
          "margin": 0,
        },
        "leftElementContainer": Object {
          "marginRight": -10,
        },
      }
    }
  />
  <ThemedComponent
    centerElement={
      <Styled(Text)
        style={
          Object {
            "color": "#000000",
            "fontFamily": "Roboto",
            "fontSize": 14,
          }
        }
      >
        Delete Character
      </Styled(Text)>
    }
    leftElement={
      <ThemedComponent
        name="delete"
      />
    }
    onPress={[Function]}
    style={
      Object {
        "container": Object {
          "height": 50,
          "margin": 0,
        },
        "leftElementContainer": Object {
          "marginRight": -10,
        },
      }
    }
  />
</View>
`;

exports[`Character Profile Card renders properly for characters at max level 1`] = `
<Styled(Card)
  style={
    Object {
      "marginLeft": 10,
      "marginRight": 10,
      "marginTop": 10,
    }
  }
>
  <Styled(CardItem)
    cardBody={true}
  >
    <Image
      style={
        Object {
          "flex": 1,
          "height": 100,
          "width": null,
        }
      }
    />
    <View
      style={
        Object {
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <ThemedComponent
        color="#ffffff"
        name="more-vert"
        onPress={[Function]}
      />
    </View>
    <View
      style={
        Object {
          "bottom": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <Styled(Text)
        style={
          Array [
            Object {
              "borderTopLeftRadius": 5,
              "color": "#ffffff",
              "fontFamily": "Roboto",
              "fontSize": 12,
              "fontStyle": "italic",
              "paddingBottom": 3,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 3,
            },
            Object {
              "backgroundColor": undefined,
            },
          ]
        }
      >
        Last updated 
        a few seconds ago
      </Styled(Text)>
    </View>
  </Styled(CardItem)>
  <Styled(CardItem)>
    <Styled(Left)
      style={
        Object {
          "flex": 2,
        }
      }
    >
      <Image
        resizeMode="contain"
        style={
          Object {
            "height": 64,
            "width": 48,
          }
        }
      />
      <Styled(Body)>
        <Styled(Text)
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "RobotoLight",
                "fontSize": 18,
                "width": 175,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          First Last
           
        </Styled(Text)>
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#9e9e9e",
                "fontFamily": "Roboto",
                "fontSize": 14,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          Race
           
          Class
        </Styled(Text)>
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#9e9e9e",
                "fontFamily": "Roboto",
                "fontSize": 14,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          Background
        </Styled(Text)>
      </Styled(Body)>
    </Styled(Left)>
    <Styled(Right)
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#9e9e9e",
                "fontFamily": "RobotoLight",
                "fontSize": 16,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          Level 
          20
        </Styled(Text)>
        <ProgressBar
          animated={false}
          animationConfig={
            Object {
              "bounciness": 0,
            }
          }
          animationType="spring"
          borderColor="#2196f3"
          borderRadius={4}
          borderWidth={1}
          color="#2196f3"
          height={6}
          indeterminate={false}
          progress={1}
          style={
            Object {
              "marginBottom": 3,
              "marginTop": 3,
            }
          }
          useNativeDriver={false}
          width={100}
        />
        <Styled(Text)
          style={
            Object {
              "color": "#9e9e9e",
              "fontFamily": "RobotoLight",
              "fontSize": 14,
            }
          }
        >
          355.0k
        </Styled(Text)>
      </View>
    </Styled(Right)>
  </Styled(CardItem)>
</Styled(Card)>
`;

exports[`Character Profile Card renders properly for characters below max level 1`] = `
<Styled(Card)
  style={
    Object {
      "marginLeft": 10,
      "marginRight": 10,
      "marginTop": 10,
    }
  }
>
  <Styled(CardItem)
    cardBody={true}
  >
    <Image
      style={
        Object {
          "flex": 1,
          "height": 100,
          "width": null,
        }
      }
    />
    <View
      style={
        Object {
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <ThemedComponent
        color="#ffffff"
        name="more-vert"
        onPress={[Function]}
      />
    </View>
    <View
      style={
        Object {
          "bottom": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <Styled(Text)
        style={
          Array [
            Object {
              "borderTopLeftRadius": 5,
              "color": "#ffffff",
              "fontFamily": "Roboto",
              "fontSize": 12,
              "fontStyle": "italic",
              "paddingBottom": 3,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 3,
            },
            Object {
              "backgroundColor": undefined,
            },
          ]
        }
      >
        Last updated 
        a few seconds ago
      </Styled(Text)>
    </View>
  </Styled(CardItem)>
  <Styled(CardItem)>
    <Styled(Left)
      style={
        Object {
          "flex": 2,
        }
      }
    >
      <Image
        resizeMode="contain"
        style={
          Object {
            "height": 64,
            "width": 48,
          }
        }
      />
      <Styled(Body)>
        <Styled(Text)
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "RobotoLight",
                "fontSize": 18,
                "width": 175,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          First Last
           
        </Styled(Text)>
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#9e9e9e",
                "fontFamily": "Roboto",
                "fontSize": 14,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          Race
           
          Class
        </Styled(Text)>
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#9e9e9e",
                "fontFamily": "Roboto",
                "fontSize": 14,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          Background
        </Styled(Text)>
      </Styled(Body)>
    </Styled(Left)>
    <Styled(Right)
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "#9e9e9e",
                "fontFamily": "RobotoLight",
                "fontSize": 16,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          Level 
          1
        </Styled(Text)>
        <ProgressBar
          animated={false}
          animationConfig={
            Object {
              "bounciness": 0,
            }
          }
          animationType="spring"
          borderColor="#2196f3"
          borderRadius={4}
          borderWidth={1}
          color="#2196f3"
          height={6}
          indeterminate={false}
          progress={0}
          style={
            Object {
              "marginBottom": 3,
              "marginTop": 3,
            }
          }
          useNativeDriver={false}
          width={100}
        />
        <Styled(Text)
          style={
            Object {
              "color": "#9e9e9e",
              "fontFamily": "RobotoLight",
              "fontSize": 14,
            }
          }
        >
          0
           / 
          300
        </Styled(Text)>
      </View>
    </Styled(Right)>
  </Styled(CardItem)>
</Styled(Card)>
`;
